--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,15 @@
 {
     "version": 2,
-    "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+    "builds": [
+      {
+        "src": "api/**/*.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      }
     ]
-}
+  }
