--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,14 @@
 {
     "version": 2,
-    "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/",
             "dest": "index.js"
         }
     ]
