--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,19 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "./index.js*.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/",
-            "dest": "index.js",
-            "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
-        }
+      {
+        "src": "./(.*)",
+        "dest": "./$1"
+      },
+      {
+        "src": "/",
+        "dest": "index.js"
+      }
     ]
-}
+  }
