--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,17 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.js*.js",
+        "src": "./index.js.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "./(.*)",
-        "dest": "./$1"
+        "dest": "./"
       },
       {
-        "src": "/",
+        "src": "./",
         "dest": "index.js"
       }
     ]
