--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,24 +1,18 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./index.js.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "./(.*)",
-        "dest": "/"
-      },
-      {
-        "src": "./",
-        "dest": "index.js"
-      },
-      {
-        "rewrites": [
-            {"source": "/(.*)", "destination": "/"}
-        ]
-    }
+        {
+            "src": "/(.*)",
+            "dest": "/index.js"
+        },
+        {
+            "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+        }
     ]
-  }
+}
